CURRENT
--------
- Fixed #40357 - When service is accessed through Chrome or Internet explorer, HTTP 405 Method Not Allowed is returned

20180814
--------
- Added #37782 - Update all instances of the Spring Framework in order to include fixes for the latest CVEs
- Fixed #37932 - The service fails while obtaining the PKs for a view if the user only has metadata privileges over it
- Fixed #38380 - Avoid entities without key properties

20180426
--------
- Fixed #36962 - Explain the required privileges for users in the user manual
- Fixed #36983 - Clean META-INF resources in distributions
- Fixed #37021 - Replace Log4j by SLF4J
- Fixed #36960 - User names should be quoted in CONNECT statements
- Fixed #37044 - Error accessing the root of the OData 2 Service
- Fixed #37067 - Filter queries using decimal and doubles literals are not being properly delegated to VDP
- Fixed #36877 - Steps to adapt OData 2 Service to Denodo 7

20180312
---------------
- Fixed #36395 - OData 2 does not allow views without primary key
- Fixed #36389 - The OData 2 Service cannot access VDP databases and views with non-ASCII characters in their names.

20170821
--------
- Added #33446 - Debug support
- Fixed #33458 - HTTP Error 500 when service name contains database name

20170518
--------
- Added #32416 - Create scripts to manage the Odata2 service as Windows service.
- Fixed #32392 - Password issue in OData

20170404
--------
- Fixed #28998 - Use Date/Timestamp literals instead of String
- Added #31696 - Review semantics of $top and $skip and how they are used for pagination

20160902
--------
- Fixed #28748 - Exception using a logical condition with null inside parentheses in a $filter expression

20160523
--------
- Fixed #27519 - OData Service goes down after several failed login attempts.

20160428
--------
- Fixed #27098 - Incorrect implementation of the $top operator.
- Fixed #27144 - Incorrect inclusion of "__next" links in response when remaining result count is zero.

20160414